--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.1.0"
     , "jade": "*"
+    , "stylus": "*"
     , "less-middleware": "*"
     , "mongodb": ">= 0.9.6-7"
     , "connect-mongo": ">= 0.3"
